einweuv working for awhile

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,100 +1,35 @@
 {% extends "layouts/base.html" %}
 {% set project = "Home" %}
- 
+
 {% block body %}
-    <!-- Start of body content specific to page -->
-    <div class="px-5 py-5 mx-auto">
-        <h1 class="text-white"><strong>DNHS Schedule</strong></h1>
-        <h6 class="text-white">My name is yasha and this is my homepage designed by me.</h6>
-        <div class="row">
-            <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-                <a href="https://poway.instructure.com/courses/127268" class="btn btn-primary">APCSP</a>
-               
-             
-                <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                    Dropdown
-                  </button>
-                  <ul class="dropdown-menu">
-                    <a href="https://nighthawkcoders.github.io/APCSP/" class="btn">Nighthawkcoders Home</a>
-                    <h5 class="card-title"><strong></strong></h5>
-                    <a href="https://yashakhoshini.github.io/yasha-fastpages/" class="btn">Personal Fastpages</a>
-                    <h5 class="card-title"><strong></strong></h5>
-                    <a href="https://github.com/yashakhoshini/yasha-fastpages/" class="btn">Github repositories</a>
-                    <h5 class="card-title"><strong></strong></h5>
-                    <a href="https://github.dev/yashakhoshini/yasha-fastpages" class="btn">Github.dev</a>
-                    <h5 class="card-title"><strong></strong></h5>
-                    <a href="https://github.com/users/yashakhoshini/projects/1/views/1" class="btn">Scrum board</a>
-                  </ul>
-                </div>
-              </div>
-     <div class="px-5 py-5 mx-auto">
-         <h1 class="text-white"><strong></strong></h1>
-                <div class="row">
-                    <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-                        <a href="https://poway.instructure.com/courses/127712" class="btn btn-primary">English</a>
-                       
-                     
-                        <div class="btn-group" role="group">
-                          <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                            Dropdown
-                          </button>
-                          <ul class="dropdown-menu">
- <a href="https://docs.google.com/presentation/d/1jLlZi5fwZMpG9gTQu-XHgkjWjGxKNk9tenDacfrllu4/edit#slide=id.p" class="btn">Slide's week 1</a>
- <h5 class="card-title"><strong></strong></h5>
- <a href="https://docs.google.com/presentation/d/16xq4Nvhh2TqbXjh5Arcr1DH9W58Ayo4h_ijl5KUYZdk/edit#slide=id.p" class="btn">Slide's week 2</a>
- <h5 class="card-title"><strong></strong></h5>
- <a href="https://docs.google.com/presentation/d/1V_rAYzIH9Ut5wE3HDr52G_Abkql7Mjwf2yLZvFwJSxw/edit#slide=id.p" class="btn">Slide's week 3</a>
- <h5 class="card-title"><strong></strong></h5>
- <a href="https://docs.google.com/presentation/d/1PtcY6oxGvOe6JTbXDItEN4ae7kNalyk1Cr6fTWwAAWQ/edit#slide=id.p" class="btn">Slide's week 4</a>
- <h5 class="card-title"><strong></strong></h5>
- <a href="https://docs.google.com/presentation/d/14wvwphg7gEqq7rfTTOryvAHDlQta9iGjodQTHoNbDkg/edit#slide=id.p" class="btn">Slide's week 5</a>
-                          </ul>
-                        </div>
-                      </div>
-                      <div class="px-5 py-5 mx-auto">
-                        <h1 class="text-white"><strong></strong></h1>
-                               <div class="row">
-                                   <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-                                       <a href="https://poway.instructure.com/courses/131978" class="btn btn-primary">Math</a>
-                                     
-                                     
-                                       <div class="btn-group" role="group">
-                                         <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                                           Dropdown
-                                         </button>
-                                         <ul class="dropdown-menu">
-                                            <a href="https://sso.cpm.org/?redirect_uri=https%3A%2F%2Febooks.cpm.org%2Fssologin.php" class="btn">E-book</a>
-                                            <h5 class="card-title"><strong></strong></h5>
-                                            <a href="https://docs.google.com/document/d/1U81dlAg-1FwNOw38xfoNv5YPO_lm900_mgZ3W82nihk/edit" class="btn">Class calender</a>
-                                            <h5 class="card-title"><strong></strong></h5>
-                                            <a href="https://pdfs.cpm.org/CoreConnections/CPMSelectedAnswers/int2/INT2_Selected%20Answers.pdf" class="btn">CPM Solutions</a>
-                                            <h5 class="card-title"><strong></strong></h5>
-                                            <a href="https://poway.instructure.com/courses/131978/pages/extra-practice" class="btn">Extra Practice</a>
-                                            <h5 class="card-title"><strong></strong></h5>
-                                           
-                                         </ul>
-                                       </div>
-                                     </div>
-                                     <div class="px-5 py-5 mx-auto">
-                                        <h1 class="text-white"><strong></strong></h1>
-                                               <div class="row">
-                                                   <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-                                                       <a href="https://poway.instructure.com/courses/126942" class="btn btn-primary">AP World History</a>
-                                                     
-                                                     
-                                                       <div class="btn-group" role="group">
-                                                         <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                                                           Dropdown
-                                                         </button>
-                                                         <ul class="dropdown-menu">
-                                                            <a href="https://docs.google.com/document/d/1fXL7oppzt18p0isVZez79lDZ5vwqPqASgRmeVQd9tjE/edit" class="btn">Homework Calender</a>
-                                                            <h5 class="card-title"><strong></strong></h5>
-                                                            <a href="https://poway.instructure.com/courses/126942/pages/online-textbook" class="btn">Online Textbook</a>
-                                                            <h5 class="card-title"><strong></strong></h5>
-                                                            <a href="https://docs.google.com/document/d/1Pt-H42bBG_ZB1ZxBRfoRWgqUAjmRx4phItoNWDd7WXo/edit" class="btn">World Notes Checklist</a>
-                                                         </ul>
-                                                       </div>
-                                                     </div>
-                    </p>
+<script>
+
+const ticker = "APPL";
+const api_key = "b7fa84afea6e45609dd289c0f21b9f62";
+
+function getStockPrice(tickerSymbol, api) {
+  const url = `https://api.twelvedata.com/price?symbol=${tickerSymbol}&apikey=${api}`;
+  return fetch(url)
+    .then(response => response.json())
+    .then(data => data.price.slice(0, -3))
+    .catch(error => console.error(error));
+}
+
+function getStockQuote(tickerSymbol, api) {
+  const url = `https://api.twelvedata.com/quote?symbol=${tickerSymbol}&apikey=${api}`;
+  return fetch(url)
+    .then(response => response.json())
+    .catch(error => console.error(error));
+}
+
+getStockQuote(ticker, api_key)
+  .then(stockData => {
+    getStockPrice(ticker, api_key)
+      .then(stockPrice => {
+        const exchange = stockData.exchange;
+        const name = stockData.name;
+        console.log(name, stockPrice);
+      });
+  });
+</script>
 {% endblock %}
