--- a/templates/layouts/project.html
+++ b/templates/layouts/project.html
@@ -91,8 +91,6 @@
                 <!-- notice jinja style variables used in href's -->
                 <a><h5>{{basename}}</h5></a>
                 <a href={{github}} target="_blank"><i class="fa fa-github"></i></a>
-                <a href={{youtube}} target="_blank"><i class="fa fa-youtube-play"></i></a>
-                <a href={{twitter}} target="_blank"><i class="fa fa-twitter"></i></a>
             {% endblock %}
         </div>
     </div>
@@ -108,7 +106,7 @@
 
         <div class="row" style="padding-left: 10%;">
             <div class="col-3">
-                <a href="{{ overview }}" class="btn">Overview</a>
+                <a href="{{ overview }}" class="btn">fastpages</a>
             </div>
         
             <div class="col-3">
@@ -117,10 +115,6 @@
         
             <div class="col-3">
                 <a href="{{ repo }}" class="btn">Repository</a>
-            </div>
-        
-            <div class="col-3">
-                <a href="{{ authors }}" class="btn">Authors</a>
             </div>
         </div>
 
