--- a/templates/stub.html
+++ b/templates/stub.html
@@ -8,8 +8,9 @@
 {% block body %}
     <!- Try building a new body here, bootstrap is a wise choice ->
     <div class="px-5 py-5 mx-auto">
-        <h1 class="text-primary"><strong>Stubby Body</strong></h1>
-        <p class="text-secondary">Put your name here</p>
+        <h1 class="text-primary"><strong>Speed Fanpage</strong></h1>
+        <p class="text-secondary">iShowSpeed Highlights</p>
+        <iframe width="700" height="700" src="https://www.youtube.com/embed/t5yP-wywGnQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 {% endblock %}
 
