--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -8,9 +8,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 <html lang="en">
 
 {% set basename = "Yasha's Homepage" %}
-{% set github = "https://github.com/nighthawkcoders" %}
-{% set twitter = "https://twitter.com/NighthawkCoding" %}
-{% set youtube = "https://www.youtube.com/channel/UClIKOsDS5dsfzFA3zveDT3Q?view_as=subscriber" %}
+{% set github = "https://github.com/yashakhoshini/yasha-fastpages" %}
 
 <head>
     <!-- Required meta tags -->
